<resources>
    <string name="app_name">LiScanner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="error_barcode_missing">Barcode Format Wrong</string>
    <string name="chooser_title">Share barcode with</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>



    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_About">About</string>
    <string name="pref_header_barcode">Barcode Settings</string>
    <string name="pref_title_soft_key">Enable Soft Scanning</string>
    <string name="pref_description_soft_key_sumnmary">Sets barcode to enter by user through keyboard.</string>
    <string name="pref_default_barcode_racklength">8</string>
    <string name="pref_title_barcode_racklength">Barcode Length of Rack</string>
    <string name="pref_default_barcode_itemlength">10</string>
    <string name="pref_title_barcode_itemlength">Barcode Length of Item</string>
    <string name="pref_Summary_racklength">Set the default barcode length of Rack to be scanned.</string>
    <string name="pref_summary_itemlength">Set the default barcode length of Item to be scanned.</string>
    <string name="pref_default_app_term_conditions">This is the deafult liscene of the Li.Scanner App.</string>
    <string name="pref_title_app_term_condition">Terms And Conditions</string>
    <string name="pref_default_app_about_lisec">About Our Organization.</string>
    <string name="pref_title_app_about_lisec">About Lisec Group</string>
    <string name="summary_about_lisec">About Our Organisations and its Value with you.</string>
    <string name="summary_terms_conditions">View the Terms and Coditions of our Software.</string>
    <string name="pref_title_app_version">App Version</string>
    <string name="pref_default_app_version">1.0</string>
    <string name="pref_summary_machineId">Set the machine Id for scanner device.</string>
    <string name="pref_title_barcode_machineId">MachineId of Device.</string>
    <string name="pref_summary_workstepId">Set the Workstep of Scanner Item.</string>
    <string name="pref_title_barcode_workstepId">Workstep of Item.</string>

</resources>
